<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#DEEEE1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Username_SUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/Username_editText_hint_SUS" />

            <EditText
                android:id="@+id/Password_SUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/Password_editText_hint_SUS" />

            <EditText
                android:id="@+id/ValidatePassword_SUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/ValidatePassword_editText_hint_SUS" />

            <EditText
                android:id="@+id/FirstName_SUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/FirstName_editText_hint_SUS" />

            <EditText
                android:id="@+id/LastName_SUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/LastNAme_editText_hint_SUS" />

            <EditText
                android:id="@+id/Email_SUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/Email_editText_hint_SUS" />

            <EditText
                android:id="@+id/Telephone_SUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/Telephone_editText_hint_SUS" />

            <CheckBox
                android:id="@+id/Host_SUS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Host_checkBox_text" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.75"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/sourceimage_SUS"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:text="@string/image_textView_SUS"
            android:textSize="15sp"
            android:layout_toStartOf="@+id/UserImage_SUS" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/selectImageButton_SUS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sourceimage_SUS"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_plus"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            app:elevation="4dp"
            app:fabSize="mini"
            app:rippleColor="@color/colorPrimary">

        </android.support.design.widget.FloatingActionButton>


        <ImageView
            android:id="@+id/UserImage_SUS"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="41dp"
            android:contentDescription="@string/ImageProfile_description"
            android:src="@mipmap/defaultimage"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/submitButton_SUS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:textAllCaps="false"
        android:textSize="8pt" />

</LinearLayout>
